--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <button id="choose">I choose you</button>
     </div>
 
-    <div id="searchbar">Search<input type="text" id="search"></div>
+
+    <!-- <div id="searchbar">Search<input type="text" id="search"></div> -->
 
     <footer>
       <p>
