--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <button id="choose">I choose you</button>
     </div>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yHGoK23hNHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
     <!-- <div id="searchbar">Search<input type="text" id="search"></div> -->
 
