a lot of shit contact list

--- a/Pokedex.html
+++ b/Pokedex.html
@@ -13,7 +13,7 @@ rel="stylesheet"
 <body>
 
 <div class="search-container">
-<input id="name-input" type="text" placeholder="Name / id" />
+<input id="name-input" type="dropdown" placeholder="Name / id" />
 
 <div id="search-btn" class="ball-container">
   <div class="upper-half-ball"></div>
@@ -142,10 +142,10 @@ rel="stylesheet"
   <div class="center-buttons-container">
     <div class="center-left-container">
       <div class="small-reds-container">
-        <div class="small-light red" style = "position:relative; bottom: 125px;">
+        <div class="small-light red" style = "position:relative; bottom: 120px;">
           <div class="dot light-red"></div>
         </div>
-        <div class="small-light red" style = "position:relative; bottom: 125px;">
+        <div class="small-light red" style = "position:relative; bottom: 120px;">
           <div class="dot light-red"></div>
         </div>
       </div>
