moving image mk1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <a class="link is-info">Contact</a>
         </p>
     </nav>
+<!--  -->
 
     <div class="container">
         <label for="pickpokemon">Go!</label>
@@ -46,6 +47,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZEVpmis4Cng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
+    <div class="container">
+      <div class="content">
+        <img src="Media/buscartoon.jpg" class="mini" />
+      </div>
+    </div>
     <!-- <div id="searchbar">Search<input type="text" id="search"></div> -->
 
     <footer>
