--- a/index2.html
+++ b/index2.html
@@ -232,7 +232,9 @@
       <box id="video-box"></box>
         <span id="header-pokename"></span>
           <box id="pokemon-image"></box>
-            <box id="playlist-title">Legendary Songs</box>
+            <box id="id-circle"></box>
+              <box id="playlist-title">Legendary Songs</box>
+                <box id="height-weight"></box>
     </box>
   </section>
 
