--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" style="font-size:150%;">Pokemon</a>
+      <a class="link is-info" href="Pokedex.html" style="font-size:150%;">Pokedex</a>
     </p>
     <p class="level-item has-text-centered">
       <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
@@ -79,22 +79,22 @@
             </p>
             <div class='contactlogo'>
               <div id="email">
-                <a href="mailto: quynhndinh96@gmail.com"
+                <a href="mailto: tony6776a@gmail.com"
                   ><img src="assets/images/Gmail-Logo.wine.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
               <div id="github">
-                <a href="https://github.com/quynhndinh" target="_blank"
+                <a href="https://github.com/Dominiscus1" target="_blank"
                   ><img src="assets/images/github.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
               <div id="linkedin">
-                <a href="https://www.linkedin.com/in/quynh-dinh-711989118/" target="_blank"
+                <a href="linkedin.com/in/anthony-jimenez-937a61132" target="_blank"
                   ><img src="assets/images/linkedin.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
               <div id="portfolio">
-                <a href="https://quynhndinh.github.io/Portfolio/" target="_blank"
+                <a href="https://dominiscus1.github.io/My-Portfolio/" target="_blank"
                   ><img src="assets/images/pokeball_PNG.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
@@ -115,22 +115,22 @@
             </p>
             <div class='contactlogo'>
               <div id="email">
-                <a href="mailto: quynhndinh96@gmail.com"
+                <a href="mailto: harrison.j.oliner@gmail.com"
                   ><img src="assets/images/Gmail-Logo.wine.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
               <div id="github">
-                <a href="https://github.com/quynhndinh" target="_blank"
+                <a href="https://github.com/Harrison-Oliner" target="_blank"
                   ><img src="assets/images/github.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
               <div id="linkedin">
-                <a href="https://www.linkedin.com/in/quynh-dinh-711989118/" target="_blank"
+                <a href="https://www.linkedin.com/in/harrison-oliner-8280b01ab/" target="_blank"
                   ><img src="assets/images/linkedin.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
               <div id="portfolio">
-                <a href="https://quynhndinh.github.io/Portfolio/" target="_blank"
+                <a href="https://github.com/Harrison-Oliner/Portfolio-Harrison" target="_blank"
                   ><img src="assets/images/pokeball_PNG.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
@@ -151,12 +151,12 @@
             </p>
             <div class='contactlogo'>
               <div id="email">
-                <a href="mailto: quynhndinh96@gmail.com"
+                <a href="mailto: negronmarc@gmail.com"
                   ><img src="assets/images/Gmail-Logo.wine.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
               <div id="github">
-                <a href="https://github.com/quynhndinh" target="_blank"
+                <a href="https://github.com/negronmarc" target="_blank"
                   ><img src="assets/images/github.png" alt="" style="max-width: 15%; height: 15%;"
                 /></a>
               </div>
@@ -166,7 +166,7 @@
                 /></a>
               </div>
               <div id="portfolio">
-                <a href="https://quynhndinh.github.io/Portfolio/" target="_blank"
+                <a href="https://negronmarc.github.io/portfolio/" target="_blank"
                   ><img src="assets/images/pokeball_PNG.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
