--- a/Pokedex.html
+++ b/Pokedex.html
@@ -1,16 +1,34 @@
-<link
-rel="icon"
-type="image/gif/jpg"
-href="https://image.winudf.com/v2/image/bmV0LmFudGFmdW5ueS5wb2tlbW9uZ28uZ3VpZGUuZXhwZXJ0X2ljb25fMTUwNjAyMjk4NF8wOTc/icon.png?w=170&fakeurl=1"
-/>
-<link
-href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-rel="stylesheet"
-/>
-<link rel="stylesheet" href="./assets/css/pokedex.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/gif/jpg" href="https://image.winudf.com/v2/image/bmV0LmFudGFmdW5ueS5wb2tlbW9uZ28uZ3VpZGUuZXhwZXJ0X2ljb25fMTUwNjAyMjk4NF8wOTc/icon.png?w=170&fakeurl=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="./assets/css/pokedex.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <title>Pokedex</title>
 </head>
 
 <body>
+  <nav class="level">
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="Pokedex.html" style="font-size:150%;">Pokedex</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" style="font-size:150%;">Region</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
+    </p>
+</nav>
 
 <div class="search-container">
 <input id="name-input" type="dropdown" placeholder="Name / id" />
