--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 </head>
 
 <body>
-    <nav class="level">
-        <p class="level-item has-text-centered">
-          <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
-        </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" style="font-size:150%;">Pokemon</a>
-        </p>
-        <p class="level-item has-text-centered">
-          <img src="assets/images/pokemon_logo.png" alt="" style="height: 80px;">
-        </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" style="font-size:150%;">Region</a>
-        </p>
-        <p class="level-item has-text-centered">
-          <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
-        </p>
-    </nav>
+  <nav class="level">
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="Pokedex.html" style="font-size:150%;">Pokedex</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" style="font-size:150%;">Region</a>
+    </p>
+    <p class="level-item has-text-centered">
+      <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
+    </p>
+</nav>
 
     <div class="container">
         <label for="pickpokemon">Go!</label>
@@ -55,16 +55,13 @@
       </script> 
     </div> 
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZEVpmis4Cng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
     <!-- <div id="searchbar">Search<input type="text" id="search"></div> -->
 
     <footer>
       <p>
         Made with ❤️ by: 
         <br>
-        Qunyh Dinh, Anthony Jimenez, Harrison Oliner, Marc Negron
+        Quynh Dinh, Anthony Jimenez, Harrison Oliner, Marc Negron
       </p>
     </footer>
 
