updated contact region and pokedex

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" style="font-size:150%;">Region</a>
+      <a class="link is-info" href= "region.html" style="font-size:150%;">Region</a>
     </p>
     <p class="level-item has-text-centered">
       <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
