Combined two js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
   
   <section id="card">
     <box id="background-card">
-      <box id="video-box"></box>
+      <box id="video-box">
+        <div id="frame-container">
+          <iframe id="frame">
+  
+          </iframe>
+        </div> <!--manually created iframe linked with js-->
+      </box>
         <span id="header-pokename"></span>
           <box id="firstbox"></box>
             <box id="secondbox"></box>
