--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         >
       </p>
       <p class="level-item has-text-centered">
-        <a class="link is-info" href="Pokedex.html" style="font-size: 150%"
+        <a class="link is-info" href="pokedex.html" style="font-size: 150%"
           >Pokedex</a
         >
       </p>
