--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="assets/css/contact-style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/flying.css">
 
     <title>Contact</title>
 </head>
 <body>
+  <div class="flier"><img src="./assets/images/headphone snorlax.png" alt="" style="width: 10%;"></div>
   <nav class="level">
     <p class="level-item has-text-centered">
       <a class="link is-info" href="index.html" style="font-size: 150%"
@@ -18,7 +20,7 @@
       >
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" href="Pokedex.html" style="font-size: 150%"
+      <a class="link is-info" href="pokedex.html" style="font-size: 150%"
         >Pokedex</a
       >
     </p>
