--- a/pokedex.html
+++ b/pokedex.html
@@ -8,9 +8,11 @@
 <link rel="stylesheet" href="assets/css/pokedex.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 <link rel="stylesheet" href="./assets/css/reset.css" />
+<link rel="stylesheet" href="./assets/css/flying.css">
 </head>
 
 <body>
+  <div class="flier"><img src="./assets/images/headphone snorlax.png" alt="" style="width: 10%;"></div>
 
   <nav class="level">
     <p class="level-item has-text-centered">
@@ -19,7 +21,7 @@
       >
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" href="Pokedex.html" style="font-size: 150%"
+      <a class="link is-info" href="pokedex.html" style="font-size: 150%"
         >Pokedex</a
       >
     </p>
