Added the region html and js

--- a/contact.html
+++ b/contact.html
@@ -13,21 +13,38 @@
 <body>
   <nav class="level">
     <p class="level-item has-text-centered">
-      <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
+      <a class="link is-info" href="index.html" style="font-size: 150%"
+        >Home</a
+      >
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" href="Pokedex.html" style="font-size:150%;">Pokedex</a>
+      <a class="link is-info" href="pokedex.html" style="font-size: 150%"
+        >Pokedex</a
+      >
     </p>
     <p class="level-item has-text-centered">
-      <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
+      <a href="https://www.pokemon.com/us/" target="_blank"
+        ><img
+          src="assets/images/pokemon_logo.png"
+          style="height: 60px"
+          alt=""
+      /></a>
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" href= "region.html" style="font-size:150%;">Region</a>
+      <a
+        class="link is-info"
+        href="region.html"
+        target="_blank"
+        style="font-size: 150%"
+        >Region</a
+      >
     </p>
     <p class="level-item has-text-centered">
-      <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
+      <a class="link is-info" href="contact.html" style="font-size: 150%"
+        >Contact</a
+      >
     </p>
-</nav>
+  </nav>
 
     <section class="Column">
         <section class="contact" id="quynh">
@@ -72,10 +89,7 @@
           <div class="name">
             <h1 class="name-title" style="font-size:140%;">Anthony Jimenez</h1>
             <p class="name-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-              sed dolorem fugit sapiente porro veniam pariatur dolore nostrum
-              delectus inventore tempore minus nemo, iste ullam illo laboriosam
-              maiores repudiandae quos!
+              My name is Anthony Jimenez and I am from New Jersey. I enjoy playing video games and watching anime. I also am an aspiring game designer and have been self-teaching myself Unity and C# for game development.
             </p>
             <div class='contactlogo'>
               <div id="email">
@@ -89,7 +103,7 @@
                 /></a>
               </div>
               <div id="linkedin">
-                <a href="linkedin.com/in/anthony-jimenez-937a61132" target="_blank"
+                <a href="https://www.linkedin.com/in/anthony-jimenez-937a61132" target="_blank"
                   ><img src="assets/images/linkedin.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
@@ -108,10 +122,7 @@
           <div class="name">
             <h1 class="name-title" style="font-size:140%;">Harrison Oliner</h1>
             <p class="name-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-              sed dolorem fugit sapiente porro veniam pariatur dolore nostrum
-              delectus inventore tempore minus nemo, iste ullam illo laboriosam
-              maiores repudiandae quos!
+              Hello! My name is Harrison Oliner and I live in PA. I am learning more about programing so I will have a more diversified skill set for future jobs.
             </p>
             <div class='contactlogo'>
               <div id="email">
@@ -130,7 +141,7 @@
                 /></a>
               </div>
               <div id="portfolio">
-                <a href="https://github.com/Harrison-Oliner/Portfolio-Harrison" target="_blank"
+                <a href="https://harrison-oliner.github.io/Portfolio-Harrison/" target="_blank"
                   ><img src="assets/images/pokeball_PNG.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
@@ -144,10 +155,7 @@
           <div class="name">
             <h1 class="name-title" style="font-size:140%;">Marc Negron</h1>
             <p class="name-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-              sed dolorem fugit sapiente porro veniam pariatur dolore nostrum
-              delectus inventore tempore minus nemo, iste ullam illo laboriosam
-              maiores repudiandae quos!
+              Hello! My name is Marc Negron and I am an aspiring Web Developer. I am earnest in my desire to better myself whether it be personally or professionally.
             </p>
             <div class='contactlogo'>
               <div id="email">
@@ -161,7 +169,7 @@
                 /></a>
               </div>
               <div id="linkedin">
-                <a href="https://www.linkedin.com/in/quynh-dinh-711989118/" target="_blank"
+                <a href="https://www.linkedin.com/in/marc-negron-6b48b0226/" target="_blank"
                   ><img src="assets/images/linkedin.png" alt="" style="max-width: 10%; height: 10%;"
                 /></a>
               </div>
