--- a/index.html
+++ b/index.html
@@ -1,40 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/gif/jpg" href="https://image.winudf.com/v2/image/bmV0LmFudGFmdW5ueS5wb2tlbW9uZ28uZ3VpZGUuZXhwZXJ0X2ljb25fMTUwNjAyMjk4NF8wOTc/icon.png?w=170&fakeurl=1"/>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link rel="stylesheet" href="./assets/css/cardstyle.css" />
-  <link rel="stylesheet" href="./assets/css/reset.css" />
-  <title>Poke-Beats</title>
-</head>
-<body>
-  <nav class="level">
-    <p class="level-item has-text-centered">
-      <a class="link is-info" href="index.html" style="font-size:150%;">Home</a>
-    </p>
-    <p class="level-item has-text-centered">
-      <a class="link is-info" href="Pokedex.html" style="font-size:150%;">Pokedex</a>
-    </p>
-    <p class="level-item has-text-centered">
-      <img src="assets/images/pokemon_logo.png" alt="" style="height: 60px;">
-    </p>
-    <p class="level-item has-text-centered">
-      <a class="link is-info" href= "region.html" style="font-size:150%;">Region</a>
-    </p>
-    <p class="level-item has-text-centered">
-      <a class="link is-info" href="contact.html" style="font-size:150%;">Contact</a>
-    </p>
-</nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/gif/jpg"
+      href="https://image.winudf.com/v2/image/bmV0LmFudGFmdW5ueS5wb2tlbW9uZ28uZ3VpZGUuZXhwZXJ0X2ljb25fMTUwNjAyMjk4NF8wOTc/icon.png?w=170&fakeurl=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/cardstyle.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/flying.css" />
+    <title>Poke-Beats</title>
+  </head>
 
-  <div id="select-bar">
-    <label for="pickpokemon">Go!</label>
-    <select name="pick" id="select">
-        <option value="">Choose a Pokemon</option>
+  <body>
+    <div class="flier">
+      <img
+        src="./assets/images/headphone snorlax.png"
+        alt=""
+        style="width: 10%"
+      />
+    </div>
+
+    <nav class="level">
+      <p class="level-item has-text-centered">
+        <a class="link is-info" href="index.html" style="font-size: 150%"
+          >Home</a
+        >
+      </p>
+      <p class="level-item has-text-centered">
+        <a class="link is-info" href="pokedex.html" style="font-size: 150%"
+          >Pokedex</a
+        >
+      </p>
+      <p class="level-item has-text-centered">
+        <a href="https://www.pokemon.com/us/" target="_blank"
+          ><img
+            src="assets/images/pokemon_logo.png"
+            style="height: 60px"
+            alt=""
+        /></a>
+      </p>
+      <p class="level-item has-text-centered">
+        <a
+          class="link is-info"
+          href="region.html"
+          target="_blank"
+          style="font-size: 150%"
+          >Region</a
+        >
+      </p>
+      <p class="level-item has-text-centered">
+        <a class="link is-info" href="contact.html" style="font-size: 150%"
+          >Contact</a
+        >
+      </p>
+    </nav>
+
+    <div id="select-bar">
+      <label for="pickpokemon">Go!</label>
+      <select name="pick" id="select">
+        <option aria-placeholder="">Choose a Pokemon</option>
         <option value="mew">Mew</option>
         <option value="mewtwo">Mewtwo</option>
         <option value="articuno">Articuno</option>
@@ -68,53 +108,57 @@
         <option value="reshiram">Reshiram</option>
         <option value="zekrom">Zekrom</option>
         <option value="kyurem">Kyurem</option>
+      </select>
+      <button id="choose">I choose you!</button>
+    </div>
 
-    </select>
-    <button id="choose">I choose you!</button>
-  </div>
+    <div id="save-button">
+      <button id="save">
+        Deposit
+        <div class="high p">P</div>
+        <div class="low">K</div>
+        <div class="high">M</div>
+        <div class="low">N</div>
+      </button>
+    </div>
 
-  <div id="save-button">
-    <button id="save">Deposit 
-      <div class="high p">P</div>
-      <div class="low">K</div>
-      <div class="high">M</div>
-      <div class="low">N</div>
-    </button>
-  </div>
-  
-  <section id="card">
-    <box id="background-card">
-      <box id="video-box">
-        <div id="frame-container">
-          <iframe id="frame">
-  
-          </iframe>
-        </div> <!--manually created iframe linked with js-->
-      </box>
+    <section id="card">
+      <box id="background-card">
+        <box id="video-box">
+          <div id="frame-container">
+            <iframe id="frame"> </iframe>
+          </div>
+          <!--manually created iframe linked with js-->
+        </box>
+
         <span id="header-pokename"></span>
-          <box id="firstbox"></box>
-            <box id="secondbox"></box>
-              <box id="thirdbox"></box>
-                <box id="pokemon-image"></box>
-                  <box id="id-box"></box>
-                    <box id="type"></box>
-                      <box id="playlist-title"><a href="https://www.fontspace.com/category/pokemon"><img src="https://see.fontimg.com/api/renderfont4/xyWR/eyJyIjoiZnMiLCJoIjo2NSwidyI6MTAwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/UG9rZUJlYXRz/pokemon-solid-normal.png" alt="Pokémon fonts" id="title"></a></box>
-                        <box id="first-game"></box>
-                          <box id="second-game"></box>
-                            <image id="ball-bit"></image>
-                              <box id="versions"></box>
-                                <box id="move-box"></box>
-                                  <box id="move-1" class="moves"></box>
-                                    <box id="move-2" class="moves"></box>
-                                      <box id="move-3" class="moves"></box>
-                                        <box id="move-4" class="moves"></box>
-                                          <box id="bottom-box"></box>
-    </box>
+        <box id="firstbox"></box>
+        <box id="secondbox"></box>
+        <box id="thirdbox"></box>
+        <box id="pokemon-image"></box>
+        <box id="id-box"></box>
+        <box id="type"></box>
+        <box id="playlist-title"
+          ><a href="https://www.fontspace.com/category/pokemon"
+            ><img
+              src="https://see.fontimg.com/api/renderfont4/xyWR/eyJyIjoiZnMiLCJoIjo2NSwidyI6MTAwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/UG9rZUJlYXRz/pokemon-solid-normal.png"
+              alt="PokÃ©mon fonts"
+              id="title" /></a
+        ></box>
+        <box id="first-game"></box>
+        <box id="second-game"></box>
+        <image id="ball-bit"></image>
+        <box id="versions"></box>
+        <box id="move-box"></box>
+        <box id="move-1" class="moves"></box>
+        <box id="move-2" class="moves"></box>
+        <box id="move-3" class="moves"></box>
+        <box id="move-4" class="moves"></box>
+        <box id="bottom-box"></box>
+      </box>
+    </section>
 
-  </section>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./assets/js/card.js"></script>
-
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./assets/js/card.js"></script>
+  </body>
 </html>
