--- a/pokedex.html
+++ b/pokedex.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="flier"><img src="./assets/images/headphone snorlax.png" alt="" style="width: 10%;"></div>
+  <div class="flier"><img src="./assets/images/ProfessorOak.png" alt="" style="width: 10%;"></div>
 
   <nav class="level">
     <p class="level-item has-text-centered">
