--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <title>Contact</title>
 </head>
 <body>
-  <div class="flier"><img src="./assets/images/headphone snorlax.png" alt="" style="width: 10%;"></div>
+  <div class="flier"><img src="assets/images/headphone snorlax.png" alt="" style="width: 10%; animation-direction: reverse;"></div>
   <nav class="level">
     <p class="level-item has-text-centered">
       <a class="link is-info" href="index.html" style="font-size: 150%"
