--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="assets/css/contact-style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/flying.css">
 
     <title>Contact</title>
 </head>
 <body>
+  <div class="flier"><img src="assets/images/headphone snorlax.png" alt="" style="width: 10%; animation-direction: reverse;"></div>
   <nav class="level">
     <p class="level-item has-text-centered">
       <a class="link is-info" href="index.html" style="font-size: 150%"
@@ -31,11 +33,7 @@
       /></a>
     </p>
     <p class="level-item has-text-centered">
-      <a
-        class="link is-info"
-        href="region.html"
-        target="_blank"
-        style="font-size: 150%"
+      <a class="link is-info" href="region.html" style="font-size: 150%"
         >Region</a
       >
     </p>
