--- a/pokedex.html
+++ b/pokedex.html
@@ -8,9 +8,11 @@
 <link rel="stylesheet" href="assets/css/pokedex.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 <link rel="stylesheet" href="./assets/css/reset.css" />
+<link rel="stylesheet" href="./assets/css/flying.css">
 </head>
 
 <body>
+  <div class="flier"><img src="./assets/images/ProfessorOak.png" alt="" style="width: 10%;"></div>
 
   <nav class="level">
     <p class="level-item has-text-centered">
@@ -32,11 +34,7 @@
       /></a>
     </p>
     <p class="level-item has-text-centered">
-      <a
-        class="link is-info"
-        href="region.html"
-        target="_blank"
-        style="font-size: 150%"
+      <a class="link is-info" href="region.html" style="font-size: 150%"
         >Region</a
       >
     </p>
